--- a/nblume3.gradle
+++ b/nblume3.gradle
@@ -1,14 +1,18 @@
-defaultTasks 'jar'
-
 apply plugin: 'java'
+
+defaultTasks 'jar'
 
 sourceCompatibility = 1.8
 version = '1.0'
 
+repositories {
+    mavenCentral()
+}
+
 //Define the contents of the jar file
 jar {
     manifest{
-        attributes 'Implementation-Title': 'M2 Files',
+        attributes 'Implementation-Title': 'M2',
             'Implementation-Version': version,
             'Main-Class': 'edu.gatech.oad.antlab.pkg1.AntLabMain',
             'Class-Path': '../../lib/resources.jar'
@@ -16,5 +20,6 @@ jar {
 }
 
 dependencies {
+    testCompile 'junit:junit:4.12' //adds compatibility for junits
     compile files('lib/resources.jar')
 }
